correciones api
